refactored directory structure, removed token.js, and fixed database update bug

--- a/jsdoc/services_database-service.js.html
+++ b/jsdoc/services_database-service.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>JSDoc: Source: discord/deploy-commands.js</title>
+    <title>JSDoc: Source: services/database-service.js</title>
 
     <script src="scripts/prettify/prettify.js"> </script>
     <script src="scripts/prettify/lang-css.js"> </script>
@@ -17,7 +17,7 @@
 
 <div id="main">
 
-    <h1 class="page-title">Source: discord/deploy-commands.js</h1>
+    <h1 class="page-title">Source: services/database-service.js</h1>
 
     
 
@@ -28,39 +28,75 @@
         <article>
             <pre class="prettyprint source linenums"><code>// @ts-check
 
-import { config } from './../../config/config.js'
-import { REST, Routes } from 'discord.js'
-import fs from 'fs'
-
-const commands = []
-const commandFiles = fs.readdirSync('./src/discord/commands').filter(file => file.endsWith('.js'))
-
-for (const file of commandFiles) {
-	const command = await import(`./commands/${file}`)
-	commands.push(command.default.data)
-}
-
-const rest = new REST({ version: '10' }).setToken(String(config.token))
+import { User } from '../database/models/users.js'
 
 /**
- * Update registered slash commands
+ * Checks if user exists in database
+ * @param {string} bungieNetUsername User's Bungie Net username 
+ * @returns {Promise&lt;boolean>} true/false
  */
-async function registerCommands() {
-	try {
-		console.log(`Started refreshing ${commands.length} application (/) commands.`)
-
-		const data = await rest.put(
-			Routes.applicationCommands(String(config.clientId)),
-			{ body: commands }
-		)
-
-		console.log(`Successfully reloaded ${Object(data).length} application (/) commands.`)
-	} catch (error) {
-		console.error(error)
-	}
+export async function doesUserExist(bungieNetUsername) {
+    return await User.exists({ bungie_username: bungieNetUsername }).exec() ? true : false
 }
 
-await registerCommands()
+/**
+ * Adds the specified user's information to the database
+ * @param {string} bungieNetUsername User's Bungie Net username
+ * @param {string} discordId User's Discord id
+ * @param {string} discordChannelId Id of Discord channel user initialized the alert from
+ */
+export async function addUser(bungieNetUsername, discordId, discordChannelId) {
+    const user = new User({
+        bungie_username: bungieNetUsername,
+        discord_id: discordId,
+        discord_channel_id: discordChannelId
+    })
+    try {
+        await user.save()
+    } catch (error) {
+        console.log('Adding user failed')
+        throw error
+    }
+}
+
+/**
+ * Updates the database information for a specific user
+ * @param {string} bungieMembershipId User's membership id on Bungie
+ * @param {number} refreshExpirationTime Date of expiration for user's refresh token
+ * @param {string} refreshToken User's refresh token
+ * @param {string} [bungieNetUsername] User's Bungie username
+ * @param {string} [destinyId] User's id in Destiny 2
+ * @param {string} [characterId] User's character (Hunter, Titan, Warlock) id
+ */
+export async function updateUser(bungieMembershipId, refreshExpirationTime, refreshToken, bungieNetUsername, destinyId, characterId) {
+    const daysTillTokenExpires = refreshExpirationTime / 60 / 60 / 24
+    const expirationDate = new Date()
+    expirationDate.setDate(expirationDate.getDate() + daysTillTokenExpires)
+
+    try {
+        await User.updateOne(
+            { bungie_membership_id: bungieMembershipId },
+            {
+                $set: {
+                    destiny_id: destinyId,
+                    destiny_character_id: characterId,
+                    refresh_expiration: expirationDate.toISOString(),
+                    refresh_token: refreshToken
+                }
+            },
+            (error) => {
+                if (error) {
+                    console.log('Updating user record failed')
+                    throw error
+                } else {
+                    console.log('Updated user record')
+                }
+            }
+        )
+    } catch (error) {
+        return error
+    }
+}
 </code></pre>
         </article>
     </section>
